@@ -10,6 +10,7 @@
   * Changed lsl.common.dp.SoftwareDP.apply() to lsl.commondp.SoftwareDP.applyFilter()
   * Fixed multi-threading in the lsl.common.dp.SoftwareDP class
   * Added a clock offset parameter to the cable model (lsl.common.stations.Cable)
+  * Cleaned up the correlateTBW.py scripts
 
 0.5.1
   * Added jinja2 to the list of install dependencies
